blogs/move_k8s_stack_to_istio/wordpress-istio/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    app: wordpress-mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-mysql
    version: v1
spec:
  selector:
    matchLabels:
      app: wordpress-mysql
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-mysql
        version: v1
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
