blogs/move_k8s_stack_to_istio/wordpress-istio/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: wordpress-frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress-frontend
    version: v1
spec:
  selector:
    matchLabels:
      app: wordpress-frontend
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-frontend
        version: v1
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
