blogs/move_k8s_stack_to_istio/wordpress-istio/wordpress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gateway
  http:
  - route:
    - destination:
        host: wordpress
        port:
          number: 80
